--- a/Home.html
+++ b/Home.html
@@ -149,12 +149,12 @@
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
-            <i class="bi bi-arrow-left-circle-fill text-success"></i>
+            <i class="bi bi-arrow-left-circle-fill text-secondary"></i>
             <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="next">
-            <i class="bi bi-arrow-right-circle-fill text-success"></i>
+            <i class="bi bi-arrow-right-circle-fill text-secondary"></i>
             <span class="visually-hidden">Next</span>
         </button>
     </section>
